--- a/morningChallenges/portfolioExample/index.html
+++ b/morningChallenges/portfolioExample/index.html
@@ -1,113 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
+​
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Example Portfolio</title>
-
-    <!-- Bootstrap-->
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- css files-->
-    <link ref="text/css" rel="stylesheet" href="./CSS/main.css">
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">TAH</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- navbar -->
-
+    <!-- css files -->
+    <link ref="text/css" rel="stylesheet" href="css/main.css">
+</head>
+​
+<body>
+​
+​
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
-    <!-- Fluid Jumbotron-->
-
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Theresa Hill</h1>
-            <p class="lead">About ME!!</p>
-        </div>
-    </div>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed&display=swap" rel="stylesheet">
-
-    <!-- Projects -->
-
-    <section id="projects">
-        <h1 style="text-align: center; font-size  35px; font-family: ''" div </section> </head> <body>
-        
-                <section id="contact">
-                        <div class="container">
-                            <br>
-                            <br>
-                            <h2 class="text-center text-uppercase">Contact Me</h2>
-                            <div class="row">
-                                <div class="col-12">
-                                    <form action="https://formspree.io/theresahill45@yahoo.com" method="POST">
-                                        <div class="control-group">
-                                            <div class="form-group">
-                                                <label>Name</label>
-                                                <input type="text" class="form-control" placeholder="Your Name" id="name" required
-                                                    data-validation-required-message="Please enter your name" name="name">
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                        </div>
-                                        <div class="control-group">
-                                            <div class="form-group">
-                                                <label>Email Address</label>
-                                                <input type="email" class="form-control" placeholder="Your Email" id="email" required
-                                                    data-validation-required-message="Please enter your email" name="_replyto">
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                        </div>
-                                        <div class="control-group">
-                                            <div class="form-group">
-                                                <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required
-                                                    data-validation-required-message="Please leave a message" name="message"></textarea>
-                                                <p class="help-block text-danger"></p>
-                                            </div>
-                                        </div>
-                                        <div class="text-center">
-                                            <div id="success"></div>
-                                            <button type="submit" class="btn btn-lg btn-black">
-                                                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                                Send Message
-                                            </button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-        
-        </body>
-
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+</body>
+​
 </html>
+
